[tool.poetry]
name = "gridappsd-distributed-static-ybus-service"
version = "0.1.0"
description = ""
authors = ["afisher1 <andrew.fisher@pnnl.gov>"]
readme = "README.md"
packages = [{include = "gridappsd_distributed_static_ybus_service"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
gridappsd-field-bus = "^2023.5.1a9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
